kubernetes/api-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway

spec:
  selector:
    app: api-gateway

  ports:
    - port: 8888
      targetPort: 8888

  type: ClusterIP
